syntax="proto3";
package Diadoc.Proto.Documents;

enum RecipientResponseStatus {
  RecipientResponseStatusUnknown = 0;
  RecipientResponseStatusNotAcceptable = 1;
  WaitingForRecipientSignature = 2;
  WithRecipientSignature = 3;
  RecipientSignatureRequestRejected = 4;
  InvalidRecipientSignature = 5;
  WithRecipientPartiallySignature = 6;
}